# fuzzy-funicular

./: README.md  pyproject.toml  requirements.txt  run_dev.sh  tasmota_discovery_C44F33D288A1_config.txt  tele_tasmota_CE1412_STATE.txt  tele_tasmota_CEE97F_SENSOR
bt_mqtt_ui/: main.py
bt_mqtt_ui/models/: device_state.py  device_telemetry.py  tasmota_discovery.py
bt_mqtt_ui/textual/: app.py  config.py  styles.tcss  widgets.py
tests/: conftest.py  test_config.py  test_messages.py
tests/data/: tasmota_discovery_1.txt  tele_tasmota_CE1412_STATE.txt  tele_tasmota_CEE97F_SENSOR.txt
